--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "react-case",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "antd-mobile": "^2.1.8",
-    "mobx": "^4.1.1",
-    "mobx-react": "^5.0.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
-  },
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juntaozhou05/react-case.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juntaozhou05/react-case/issues"
+  },
+  "homepage": "https://github.com/juntaozhou05/react-case#readme",
   "devDependencies": {
-    "babel-plugin-import": "^1.7.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "react-app-rewired": "^1.5.0"
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
