--- a/hm/package.json
+++ b/hm/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "react-case",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "hm",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/juntaozhou05/react-case.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/juntaozhou05/react-case/issues"
-  },
-  "homepage": "https://github.com/juntaozhou05/react-case#readme",
-  "devDependencies": {
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
