--- a/hm/package.json
+++ b/hm/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.0",
+    "mockjs": "^1.0.1-beta3"
   }
 }
