--- a/hm/package.json
+++ b/hm/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -31,6 +32,11 @@
   },
   "devDependencies": {
     "axios": "^0.19.0",
-    "mockjs": "^1.0.1-beta3"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-15": "^1.4.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "mockjs": "^1.0.1-beta3",
+    "react-test-renderer": "^16.8.6",
+    "redux": "^4.0.1"
   }
 }
