--- a/mu/package.json
+++ b/mu/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "hm",
+  "name": "mu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-transition-group": "^4.1.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,14 +29,6 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.19.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-15": "^1.4.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "mockjs": "^1.0.1-beta3",
-    "react-test-renderer": "^16.8.6",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0"
+    "axios": "^0.19.0"
   }
 }
