--- a/mu/package.json
+++ b/mu/package.json
@@ -29,6 +29,8 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1"
   }
 }
